# rmsgd

./: Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: server.rs
src/server/: server.rs
