[package]
name = "rmsgd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
owo-colors = "4.2.2"
rustyline = "16.0.0"
serde = { version = "1.0.219", features = ["derive", "std"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
